[gd_scene load_steps=5 format=2]

[ext_resource path="res://bg/RotatingBrick.tscn" type="PackedScene" id=1]
[ext_resource path="res://bg/BricksRing.gd" type="Script" id=2]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "carousel"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, 0.0 ]
}

[node name="BricksRing" type="Control"]
margin_left = -268.0
margin_top = 5.0
margin_right = -268.0
margin_bottom = 5.0
rect_pivot_offset = Vector2( 509, 299 )
script = ExtResource( 2 )

[node name="RotatingBrick" parent="." instance=ExtResource( 1 )]
position = Vector2( 304, 304 )

[node name="RotatingBrick2" parent="." instance=ExtResource( 1 )]
position = Vector2( 723, 302 )

[node name="RotatingBrick3" parent="." instance=ExtResource( 1 )]
position = Vector2( 505, 505 )

[node name="RotatingBrick4" parent="." instance=ExtResource( 1 )]
position = Vector2( 505, 100 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "carousel"
anims/RESET = SubResource( 3 )
anims/carousel = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
